Closed
Bug 449751
Opened 17 years ago
Closed 17 years ago
gfxFont.cpp failed to compile with Sun Studio 12
Categories
(Core :: Graphics, defect)
Tracking
()
RESOLVED
FIXED
People
(Reporter: ginnchen+exoracle, Assigned: ginnchen+exoracle)
References
Details
Attachments
(1 file, 1 obsolete file)
1010 bytes,
patch
|
jtd
:
review+
pavlov
:
superreview+
|
Details | Diff | Splinter Review |
gfxFont.cpp failed to compile with Sun Studio 12 since Aug 5th.
The checkin is
Bug 437356. Set up unified font entry object. r+sr=stuart
The error is
"../../../../gfx/thebes/src/gfxFont.cpp", line 1111: Error: Ambiguous "?:" expression, second operand of type "int" and third operand of type "nsRefPtr<gfxFont>" can be converted to one another.
1 Error(s) detected.
Assignee: nobody → ginn.chen
Status: NEW → ASSIGNED
Attachment #332917 -
Flags: superreview?(pavlov)
Attachment #332917 -
Flags: review?(jdaggett)
Comment 2•17 years ago
|
||
I'd prefer something like
nsRefPtr<gfxFont> font = FindFontForChar(ch, prevCh, nextCh, (aRanges.Length() == 0) ? (gfxFont*) nsnull : (gfxFont*) (aRanges[aRanges.Length() - 1].font));
This avoids unneeded refcounting.
If that works for the Solaris build, please submit another review.
Attachment #332917 -
Attachment is obsolete: true
Attachment #333366 -
Flags: superreview?(pavlov)
Attachment #333366 -
Flags: review?(jdaggett)
Attachment #332917 -
Flags: superreview?(pavlov)
Attachment #332917 -
Flags: review?(jdaggett)
Comment 4•17 years ago
|
||
Comment on attachment 333366 [details] [diff] [review]
patch v2
Looks good
Attachment #333366 -
Flags: review?(jdaggett) → review+
Updated•17 years ago
|
Attachment #333366 -
Flags: superreview?(pavlov) → superreview+
Status: ASSIGNED → RESOLVED
Closed: 17 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•