Bug 449751 gfxFont.cpp failed to compile with Sun Studio 12 r=jdaggett sr=pavlov